fix input validation and URL auto-formatting

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="lead-tracker">
-      <input type="text" id="input-el" />
+      <input type="text" id="input-el" placeholder="Paste url or use Save Tab..." />
       <button id="input-btn">Save Input</button>
       <button id="tab-btn">Save Tab</button>
       <button id="delete-btn">Delete All</button>
